@@ -86,7 +86,7 @@
  
  #include <stddef.h>		/* size_t */
  
-@@ -290,8 +292,10 @@ enum {
+@@ -300,8 +302,10 @@ enum {
  	EHBI_LAST
  };
  
@@ -136,7 +136,7 @@
  
  #include "ehbigint-log.h"
  #include "ehbigint-util.h"
-@@ -59,8 +61,10 @@
+@@ -60,8 +62,10 @@
  
  #include "eba.h"
  
